--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,9 +10,9 @@ jobs:
     Explore-GitHub-Actions:
         runs-on: ubuntu-latest
         steps:
-          - uses: actions/checkout@v2
-            with:
-                fetch-depth: 0
+#          - uses: actions/checkout@v2
+#            with:
+#                fetch-depth: 0
     
           - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event first."
           - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
