--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,10 +1,8 @@
-name: GitHub Actions Demo
+name: GitHub Actions Demo Development
 on: 
     push:
         branches:
             - development
-        paths:
-            - 'release/snapshot/snapshot.bom'
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
