--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,14 +11,15 @@ jobs:
       - uses: actions/checkout@v2
         with: 
             fetch-depth: 0
-          
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event first."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: Checking Variable
+        run: |
+            echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event first."
+            echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+            echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+            echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+            echo "🖥️ The workflow is now ready to test your code on the runner."
+      
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+          echo "🍏 This job's status is ${{ job.status }}."
