--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -19,7 +19,7 @@ jobs:
             echo "BOM_FILE=$bom" >> $GITHUB_ENV
             echo "WORK_DIR=`pwd`" >> $GITHUB_ENV
             Tag_Name="SD."
-            echo ${{Tag_Name}}
+        #    echo ${{Tag_Name}}
             echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event first."
             echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
             echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
